Make mobile friendly

--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,24 @@ h5 {
 }
 
 .content {
-    /* height: 100px; */
     display: flex;
     margin: auto;
-    /* border-right: 1px solid red;
-    border-left: 1px solid red; */
     min-width: 500px;
     max-width: 1000px;
-    /* color: rgba(0, 0, 0, 0.75) */
+}
+
+@media (max-width: 640px) {
+    .content {
+        flex-direction: column;
+    }
+
+    body .content main {
+        width: calc(100% - 16px - 16px);
+    }
+
+    aside {
+        margin: 0px 1rem 1rem;
+    }
 }
 
 body {
@@ -59,8 +69,6 @@ header {
 }
 
 .header-img img {
-    /* min-width: 200px;
-    max-width: 600px; */
     width: 100%;
     height: 16rem;
     object-fit: cover;
@@ -77,7 +85,6 @@ aside {
 
 .side-card {
     border: var(--border);
-    /* width: 100%; */
     border-radius: var(--border-radius);
     padding: 1rem;
     box-shadow: var(--box-shadow);
